--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -1,8 +1,9 @@
 @main-color : red;
-.a {
+.p {
 	background-color: @main-color;
+	span{
+		font-size: 0.625rem;
+	}
 }
 
-.b {
-	background-color: @main-color;
-}
+
